# for display continuity sake please use 2 spaces instead of tabs
  
2013-04-27 mmichaud <michael.michaud@free.fr>
  * try to fix 3611503 in FillPolygonTool
  
* release 1.6.2 ***************************************************************

2013-04-23 mmichaud <michael.michaud@free.fr>
  * set the appropriate srid to the layer after AddDatastoreLayerPlugin
  
2013-04-21 mmichaud <michael.michaud@free.fr>
  * fix a bug in MergeSelectedFeatures preventing the merge of MultiGeometries

2013-04-21 mmichaud <michael.michaud@free.fr>
  * fix bug 3611412 happening after a MergeSelectedFeatures operation and caused
    by a bad usage of dispose method in UndoableCommand
  * fix a NullPointerException in ExtractLayersByAttribute

2013-04-20 mmichaud <michael.michaud@free.fr>
  * Fix a bug reported by Uwe and preventing project containing WMSLayers to be 
    displayed correctly.
  * Fix a bug throwing an exception when RefreshDataStoreQueryPlugIn is applied 
    to a in-memory layer

2013-04-19 mmichaud <michael.michaud@free.fr>
  * Change directory from lib/ext/etc to lib/native for MrSID executable
    see https://sourceforge.net/apps/mediawiki/jump-pilot/index.php?title=MrSID
  
2013-04-18 mmichaud <michael.michaud@free.fr>
  * Fix bug appeared with recent jre (between 1.7.0_07 and 1.7.0_17) and 
    preventing error messages to be displayed (reported by Uwe on 2013-04-15)

2013-04-15 mmichaud <michael.michaud@free.fr>
  * Fix the new ZoomToWMSLayerPlugIn (multiselection case did not work properly)
  * Fix encoding problem in AbstractWMSParser

2013-04-14 mmichaud <michael.michaud@free.fr>
  * Improve WMS parser to include WMS 1.3.0 and replace the complex ZoomToWMS 
    plugin by a simple one.

********************************************************************************
* release of version 1.6.1
********************************************************************************

2013-04-11 ede
  * critical fix for Mac and Linux users
  